# p-vote

./: .gitignore  Cargo.toml  DATABASE_README.md  README.md  SOLANA_PROGRAMMING_MODEL_GUIDE.md  SOLANA_PROGRAM_SETUP_GUIDE.md  TYPESCRIPT_TESTING_SETUP_GUIDE.md  VOTE_CREATION_GUIDE.md  codama.js  eslint.config.mjs  pVoTew8KNhq6rsrYq9jEUzKypytaLtQR62UbagWTCvu.json  package-lock.json  package.json  run_tests.sh  txtx.yml
app/: errors.tsx  globals.css  layout.tsx  page.tsx
app/api/analytics/: route.ts
app/api/health/: route.ts
app/api/test/: route.ts
app/api/votes/: route.ts
app/components/: Balance.tsx  BaseSignMessageFeaturePanel.tsx  ConnectWalletMenu.tsx  DisconnectButton.tsx  ErrorDialog.tsx  SignInMenu.tsx  SolanaSignAndSendTransactionFeaturePanel.tsx  SolanaSignMessageFeaturePanel.tsx  root.tsx
app/components/cyberpunk/: ActiveVote.tsx  CreateVoteModal.tsx  CyberBalance.tsx  CyberButton.tsx  CyberModal.tsx  CyberNav.tsx  CyberSignInMenu.tsx  CyberSignInMenuItem.tsx  CyberUnconnectableWalletMenuItem.tsx  DataStreams.tsx  DegenHeader.tsx  GlitchText.tsx  Terminal.tsx  Toast.tsx  VoteAmountModal.tsx  VoteHistory.tsx  (+1 more)
app/context/: ChainContext.tsx  ChainContextProvider.tsx  RpcContext.tsx  RpcContextProvider.tsx  SelectedWalletAccountContext.tsx  SelectedWalletAccountContextProvider.tsx
app/functions/: balance.ts
app/hooks/: useAnalytics.ts  useParticipants.ts  useSolanaVoting.ts  useVotes.ts
benches/: compute_units.md  compute_units.rs
docs/: JIMINY_COMPLETE_GUIDE.md  LLM_TESTING_GUIDE.md
e2e/: e2e.ts  tests.ts
idl/: p_vote.json
logs/: .25a68373c3420bf6f6de1d451653da110516d624-audit.json
runbooks/: README.md
runbooks/deployment/: main.tx
scripts/: generate-client.ts
src/: error.rs  lib.rs  utils.rs
src/instructions/: initialize_platform.rs  initialize_position.rs  initialize_vote.rs  mod.rs  redeem_winnings.rs  update_platform.rs  update_position.rs
src/state/: mod.rs  platform.rs  position.rs  vote.rs
tests/: unit_tests.rs
(+57 files in other folders)
